[package]
name = "meowbot"
version = "0.1.0"
edition = "2021"

[dependencies]
teloxide = { version = "0.5", features = ["macros", "auto-send", "ctrlc_handler"] }
teloxide-macros = "0.4"
log = "0.4"
pretty_env_logger = "0.4.0"
tokio = { version =  "1.8", features = ["rt-multi-thread", "macros"] }
anyhow = "1.0"
